# pg-client-hs

./: .stylish-haskell.yaml  Makefile  README.md  Setup.hs  cabal.project  cabal.project.freeze  default.nix  docker-compose.yml  flake.nix  pg-client.cabal  shell.nix  stack.yaml
.github/workflows/: format.yml  test.yml  weeder.yml
bench/: Main.hs
cbits/: libpq-bindings.c  libpq-bindings.h
ci/: ci.project.local
nix/: builder.nix  compat.nix  devShell.nix  hls-overlay.nix  pg-client-overlay.nix
shim_cbits/: README
src/Control/Concurrent/: Interrupt.hs  Interruptible.hs
src/Database/PG/: ExtraBindings.hsc  Query.hs
src/Database/PG/Query/: Class.hs  Connection.hs  Listen.hs  PTI.hs  Pool.hs  Transaction.hs
test/: Interrupt.hs  Interruptible.hs  Jsonb.hs  Spec.hs  Timeout.hs
test/static/: soh-in-response.json
