cabal-version:       2.2

name:                pg-client
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/hasura/platform
license:             Apache-2.0
license-file:        LICENSE
author:              Vamshi Surabhi
maintainer:          vamshi@hasura.io
copyright:           2017 Hasura Systems Private Limited
category:            Database
build-type:          Simple
extra-source-files:  README.md

common common-all
  default-language:    Haskell2010
  default-extensions:  ImportQualifiedPost

library
  import:              common-all
  hs-source-dirs:      src
  exposed-modules:     Database.PG.Query
                     , Database.PG.Query.Class
                     , Database.PG.Query.PTI
                     , Database.PG.Query.Connection
                     , Database.PG.Query.Transaction
                     , Database.PG.Query.Pool
                     , Database.PG.Query.Listen
                     , Control.Concurrent.Interrupt

  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.13
                     , aeson >= 1.0
                     , aeson-casing >= 0.1
                     , hashable >= 1.2
                     , postgresql-binary
                     , template-haskell >= 2.11
                     , ekg-core

                     , mtl
                     , transformers-base >= 0.4
                     , monad-control >= 1.0
                     , resource-pool

                     , text >= 1.2
                     , text-builder >= 0.6
                     , bytestring >= 0.10
                     , hashtables
                     , time >= 1.6
                     , vector
                     , scientific >= 0.3
                     , uuid >= 1.3

                     , postgresql-libpq
                     , retry
                     , mmorph
                     , async
                     , safe-exceptions

  ghc-options:         -Wall

test-suite pg-client-test
  import:              common-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Interrupt
  build-depends:       base
                     , pg-client
                     , bytestring >= 0.10
                     , hspec
                     , mtl
                     , time
                     , async
                     , safe-exceptions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

benchmark pg-client-bench
  import:              common-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , mtl
                     , criterion >= 1.4
                     , pg-client
                     , hasql
                     , hasql-transaction
                     , hasql-pool
                     , file-embed
                     , bytestring >= 0.10
                     , text
                     , text-builder >= 0.6
                     , postgresql-libpq
                     , hashable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

source-repository head
  type:     git
  location: https://github.com/hasura/pg-client-hs
