cabal-version:      3.0
name:               pg-client
version:            0.1.0

-- synopsis:
-- description:
homepage:           https://github.com/hasura/platform
license:            Apache-2.0
license-file:       LICENSE
author:             Vamshi Surabhi
maintainer:         vamshi@hasura.io
copyright:          2017 Hasura Systems Private Limited
category:           Database
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/hasura/pg-client-hs

common common-all
  -- This warning strategy was inspired by Max Tagher's 'Enable All the
  -- Warnings' blog post.
  --
  -- NOTE: '-Wno-prepositive-qualified-module' is currently a workaround for
  -- https://github.com/haskell/cabal/pull/7352
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

library
  import:          common-all
  hs-source-dirs:  src
  exposed-modules:
    Control.Concurrent.Interrupt
    Database.PG.Query
    Database.PG.Query.Class
    Database.PG.Query.Connection
    Database.PG.Query.Listen
    Database.PG.Query.Pool
    Database.PG.Query.PTI
    Database.PG.Query.Transaction

  build-depends:
    , aeson              >=1.0
    , aeson-casing       >=0.1
    , async
    , attoparsec         >=0.13
    , base               >=4.7  && <5
    , bytestring         >=0.10
    , ekg-core
    , hashable           >=1.2
    , hashtables
    , mmorph
    , monad-control      >=1.0
    , mtl
    , postgresql-binary
    , postgresql-libpq
    , resource-pool
    , retry
    , safe-exceptions
    , scientific         >=0.3
    , template-haskell   >=2.11
    , text               >=1.2
    , text-builder       >=0.6
    , time               >=1.6
    , transformers-base  >=0.4
    , uuid               >=1.3
    , vector

test-suite pg-client-test
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  main-is:        Spec.hs
  other-modules:
    Interrupt
    Timeout

  build-depends:
    , async
    , base
    , bytestring       >=0.10
    , hspec
    , mtl
    , pg-client
    , safe-exceptions
    , time

benchmark pg-client-bench
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring         >=0.10
    , file-embed
    , hashable
    , hasql
    , hasql-pool
    , hasql-transaction
    , mtl
    , pg-client
    , postgresql-libpq
    , tasty-bench
    , text
    , text-builder       >=0.6
